# survey-assist-eval

./: .env.template  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: data_egress.md  end2end_pipeline.md  evaluation_metrics.md  index.md
notebooks/: 2025-10_semantic_vis.py  2025_09_metrics_vis.py  2025_10_cims.py  2025_11_sankey_codability_vis.py  closed_questions_notebook.py  closed_questions_rank.py  open_questions_eval.py
notebooks/classification_eval/: 2026_01_cc_sa_comparison.py  2026_02_cc_sa_comparison.py  2026_02_cc_sa_confusion.py  2026_02_codability_metrics.py  2026_02_prep_tlfs_iteration_data.py  2026_04_codability_sankey.py  2026_04_sic_section_distribution.py  helper_group_plotly.py
notebooks/free_text_analysis/: feedback_analysis.py
notebooks/november_test/: 2025_12_codability_gain_by_groups.py  2025_12_codability_gain_vis.py  2025_12_feedback_analysis_quant.py  2025_12_final_code_prep.py  2025_12_ingest_clerical.py  2026_01_cc_closed_q.py  2026_01_cc_feedback_analysis.py  2026_01_cc_sa_comparison.py  2026_01_cc_sa_comparison_by_sic.py  2026_01_closed_q_encode.py  2026_01_closed_q_nota.py  2026_01_closed_q_rank.py  2026_01_cq_nota.py  2026_01_cq_rank.py  2026_01_feedback_analysis_quantitative.py  2026_01_sic_section_distribution.py  2026_02_cq_cc_agreement.py  2026_02_sayt_comparison.py  2026_02_sayt_sa_overlap_extension.py  closed_questions_encode.py  closed_questions_notebook.py  closed_questions_rank.py  feedback_analysis_quant_2025_2026.py  helper_load_data.py
notebooks/open_questions_eval/: 2026_06_OpenQuestionMetrics_example.py  2026_06_basic_open_questions_eval.py  2026_06_question_structure_eval.py  2026_06_text_stats.py
notebooks/plotting_functions/: filterable_plots.py  standard_plots.py
notebooks/sayt/: 2026_01_sayt_experiment.py  2026_03_sayt_eval_100sample.py  2026_03_sayt_eval_2k.py  2026_03_sayt_example.py  2026_06_01_sayt_artifact_builder_example.py  2026_06_02_sayt_artifact_loader_example.py
notebooks/soc_classification_eval/: 2026_05_soc_eval_4k.py  2026_06_soc_common_errors.py
scripts/: get_evaluation_metrics.py  process_tlfs_evaluation_data.py
scripts/data_egress/: README.md  reformat_and_make_csvs.py  retrieve_survey_responses.py
scripts/sic_pipeline/: run_final_pipeline.sh  run_full_pipeline.sh  stage_1_add_semantic_search.py  stage_2_add_unambiguously_codable_status.py  stage_2_one_prompt_assign_sic_code.py  stage_3_add_open_questions.py  stage_4_add_synthetic_responses.py  stage_5_assign_final_sic_code.py  stage_5_modify_industry_description.py  stage_k_template.py
scripts/soc_pipeline/: api_e2e.py  run_full_pipeline.sh  stage_1_add_semantic_search.py  stage_2_add_unambiguously_codable_status.py  stage_2_one_prompt_assign_sic_code.py  stage_3_add_open_questions.py  stage_5_modify_job_description.py
scripts/volume_testing/: volume_test.py
src/survey_assist_eval/data_cleaning/: code_standard.py  constants.py  data_egress_validity_utils.py  open_questions_eval_prep.py  prep_data.py  sic_code_list.py  sic_codes.py  soc_code_list.py
src/survey_assist_eval/evaluation/: code_comparison.py  metrics.py  open_questions_metrics.py  plotting_helpers.py
src/survey_assist_eval/evaluation/open_questions/: open_questions_evaluation.py  question_structure_functions.py  simple_language_functions.py  text_statistics_functions.py
src/survey_assist_eval/pipeline/: api.py  constants.py  metadata.py  shared_components.py
src/survey_assist_eval/pipeline/api/: __init__.py  core.py  data.py  db.py
src/survey_assist_eval/plotting/: filterable_plots.py  plotting_helpers.py
src/survey_assist_utils/data_cleaning/: prep_data.py  sic_code_section_list.py  sic_codes.py
src/survey_assist_utils/evaluation/: metrics.py  text_analysis.py
tests/: conftest.py  test_notebook_smoke.py
tests/data_cleaning/: test_code_standard.py  test_data_egress_validation.py  test_open_questions_eval_prep.py  test_prep_data.py  test_sic_code_list.py  test_sic_code_section_list.py  test_sic_codes.py  test_soc_code_list.py
tests/data_egress_validity_test_cases/: duplicate_invalid_1.json  duplicate_invalid_2.json  duplicate_valid.json  failed_classify_invalid_1.json  failed_classify_invalid_2.json  failed_classify_invalid_3.json  failed_classify_invalid_4.json  failed_classify_valid.json  lookup_invalid_1.json  lookup_invalid_2.json  lookup_valid.json  successful_classify_invalid_1.json  successful_classify_invalid_2.json  successful_classify_invalid_3.json  successful_classify_invalid_4.json  successful_classify_valid.json
tests/evaluation/: test_code_comparison.py  test_metrics.py  test_open_question_metrics.py
tests/evaluation/open_questions/: test_open_question_evaluation.py  test_question_structure_functions.py  test_simple_language_functions.py  test_text_statistics_functions.py
tests/evaluation/open_questions/question_structure_functions/: test_instruction_prompts.py  test_interrogatives.py  test_question_structure.py  test_question_structure_metrics.py  test_question_structure_wrappers.py
tests/pipeline/: test_metadata.py  test_shared_components.py
tests/pipeline/api/: test_core.py  test_data.py  test_db.py
