[tool.poetry]
name = "survey-assist-eval"
version = "0.0.1"
description = "Evaluation module for Survey Assist"
authors = ["ONS Data Science Campus <datasciencecampus@ons.gov.uk>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "survey_assist_eval", from = "src" }]

[tool.poetry.dependencies]
numpy = "^2.3.3"
pandas = "^2.3.3"
python = "^3.12"
toml = "^0.10.2"
survey-assist-utils = { git = "https://github.com/ONSdigital/survey-assist-utils.git", tag = "v0.0.8" }

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.3"
black = "^25.1.0"
firebase-admin = "6.9.0"
gcsfs = "^2025.3.2"
google-genai = "^1.66.0"
ipykernel = "^6.29.5"
isort = "^6.0.1"
jupytext = "^1.17.1"
kaleido = "^1.2.0"
matplotlib-venn = "^1.1.2"
mkdocs-material = "^9.6.7"
mypy = "^1.15.0"
openpyxl = "^3.1.5"
pandas-gbq = "^0.26.1"
plotly = "^6.3.0"
pre-commit = "^4.2.0"
pydantic = "^2.12.5"
pylint = "^3.3.5"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
python-dotenv = "^1.1.0"
ruff = "^0.9.10"
scikit-learn = "^1.8.0"
scipy = "^1.16.3"
types-toml = "^0.10.8"
sic-classification-utils = { git = "https://github.com/ONSdigital/sic-classification-utils.git", rev = "7ab9ce3"}  # Placeholder before a tag is created

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # Enabling ALL is not recommended it will implicitly enable new rules after upgrade.
    # "ALL",

    # Ruff rules: https://docs.astral.sh/ruff/rules/

    "E",      # pycodestyle erros
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit
    "D",      # pydocstyle - Enforce existing docstrings only
    "C90",    # mccabe
    "RUF",    # Ruff specific rules

    # PL - Pylint is only partially supported, we also use the pylint tool to catch all the rules.
    # It is enabled here to take advantage of the ruff's speed.
    "PL",
]

ignore = [
    # Conflicts with google docstring style
    "D205",
    # Allow missing docstring, remove to enforce docstrings across the board
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Disable line length check as it is handled by black
    # :TODO: Remove E501 when ruff supports all black rules
    "E501",
    # indentation contains tabs
    "W191",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow use of assert statements in tests
    "S101",
    # Allow unused imports in tests as they might be used in fixtures or mocks
    "F401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
disable = ["E0401"]

[tool.pylint]
ignore = [".venv"]
ignore-paths = ["notebooks/temp/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ['src']
